# Glupper

./: .gitignore  AGENTS.md  ARCHIVEBOX.md  README.md  __init__.py  cleanup.sh  pyproject.toml  run.py
archivebox_backend/: README.md  __init__.py  archivebox_util.py  cleanup.py  config.py  db_util.py  requirements.txt  s3_util.py  worker.py
frontend/: package-lock.json  package.json
frontend/components/: CommentForm.js  Feed.js  Layout.js  Post.js  PostForm.js
frontend/contexts/: AuthContext.js
frontend/pages/: _document.js  compose.js  explore.js  index.js  login.js  register.js
frontend/pages/messages/: index.js
frontend/pages/post/: [id].js
frontend/pages/profile/: [id].js
frontend/pages/settings/: profile.js
frontend/styles/: globals.css
frontend/utils/: api.js
src/: __init__.py  config_secrets.py  main.py
src/api/: __init__.py  archives.py  auth.py  feed.py  graph.py  invites.py  messages.py  moderation.py  posts.py  serializers.py  social_accounts.py  users.py
src/app/: main.py
src/app/api/: auth.py  feed.py  users.py
src/app/core/: cache.py  db.py
src/app/models/: models.py
src/app/schemas/: schemas.py
src/app/services/: archive_service.py  post_service.py  user_service.py
src/core/: auth.py  cache.py  db.py  graph_store.py
src/models/: __init__.py  models.py
src/schemas/: __init__.py  schemas.py
src/services/: __init__.py  account_service.py  archive_service.py  aws_service.py  feed_service.py  graph_service.py  message_service.py  post_service.py  s3_service.py  sqs_service.py  user_service.py
src/services/queues/: s3_service.py  sqs_service.py
src/utils/: __init__.py  create_tables.py
